feat: validate manual imports
